[package]
name = "plugic_strip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
farmfe_core = { path = "../core", version = "0.4.2" }
farmfe_toolkit = { path = "../toolkit", version = "0.0.3" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.3" }
